src/main/java/com/sefford/kor/samples/core/business/errors/ScanError.java
package com.sefford.kor.samples.core.business.errors;

/**
 * Created by sefford on 3/11/14.
 */
public class ScanError extends InteractorError {
}
